pkg/main/default/objects/Document__c/fields/Envelope__c.field-meta.xml
<CustomField>
    <fullName>Envelope__c</fullName>
    <description>Envelope</description>
    <inlineHelpText>Envelope</inlineHelpText>
    <label>DocuSign Envelope</label>
    <referenceTo>Envelope__c</referenceTo>
    <relationshipLabel>DocuSign Envelope Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>