pkg/main/default/objects/Document__c/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <label>Extension</label>
    <length>20</length>
    <type>Text</type>
</CustomField>