pkg/main/default/objects/Document__c/fields/LastModified__c.field-meta.xml
<CustomField>
    <fullName>LastModified__c</fullName>
    <description>Source Last Modified</description>
    <inlineHelpText>Source Last Modified</inlineHelpText>
    <label>Source Last Modified</label>
    <type>DateTime</type>
</CustomField>