pkg/main/default/objects/Document__c/fields/ReadOnly__c.field-meta.xml
<CustomField>
	<fullName>ReadOnly__c</fullName>
	<defaultValue>false</defaultValue>
	<label>Read-only</label>
	<type>Checkbox</type>
</CustomField>