pkg/main/default/objects/Document__c/fields/SourceId__c.field-meta.xml
<CustomField>
    <fullName>SourceId__c</fullName>
    <label>Source ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>